--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>GraphBeMoreBlue</title>
+		<link rel="icon" href="/favicon.png" />
+		<meta property="og:image" content="/ogp.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
