OGPをちゃんと設定

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>GraphBeMoreBlue</title>
 		<link rel="icon" href="/favicon.png" />
-		<meta property="og:image" content="/ogp.png" />
+		<meta property="og:title" content="GraphBeMoreBlue" />
+		<meta property="og:description" content="Blueskyのフォローグラフを可視化するツール" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://graph.be-more.blue" />
+		<meta property="og:image" content="https://graph.be-more.blue/ogp.png" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@suibari" />
+		<meta name="twitter:creator" content="@suibari" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
