ページ説明修正

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<title>GraphBeMoreBlue</title>
 		<link rel="icon" href="/favicon.png" />
 		<meta property="og:title" content="GraphBeMoreBlue" />
-		<meta property="og:description" content="Blueskyのフォローグラフを可視化するツール" />
+		<meta property="og:description" content="SkyBeMoreBlueのネットワークを可視化するツール" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://graph.be-more.blue" />
 		<meta property="og:image" content="https://graph.be-more.blue/ogp.png" />
