--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,8 @@
 		<meta property="og:title" content="GraphBeMoreBlue" />
 		<meta property="og:description" content="SkyBeMoreBlueのネットワークを可視化するツール" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://graph.be-more.blue" />
-		<meta property="og:image" content="https://graph.be-more.blue/ogp.png" />
+		<meta property="og:url" content="https://graphbemoreblue.suibari.com" />
+		<meta property="og:image" content="https://graphbemoreblue.suibari.com/ogp.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@suibari" />
 		<meta name="twitter:creator" content="@suibari" />
